--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
 			  document.getElementById("coinLogo").src = "images/logo/mint.png";
 			  document.getElementById("bTtitle").textContent = "Mintcoin";
 			  document.getElementById("bTtitle1").textContent = "Mintcoin";
-			  tickerCode = "Mint";
+			  tickerCode = "MINT";
 			}
 			else if (document.getElementById("customCoinName").value == "aias") {
 			  document.getElementById("coinjs_pub").value = "0x17";
@@ -1111,7 +1111,7 @@
 			  document.getElementById("coinLogo").src = "images/logo/bean.png";
 			  document.getElementById("bTtitle").textContent = "Bean Cash";
 			  document.getElementById("bTtitle1").textContent = "Bean Cash";
-			  tickerCode = "bean";
+			  tickerCode = "BEAN";
 			}
 			else if (document.getElementById("customCoinName").value == "bnode") {
 			  document.getElementById("coinjs_pub").value = "0x19";
@@ -1457,6 +1457,250 @@
 			  document.getElementById("bTtitle1").textContent = "Droidz";
 			  tickerCode = "DRZ";
 			}
+			else if (document.getElementById("customCoinName").value == "eac") {
+			  document.getElementById("coinjs_pub").value = "0x5d";
+			  document.getElementById("coinjs_priv").value = "0xdd";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/eac.png";
+			  document.getElementById("bTtitle").textContent = "Earthcoin";
+			  document.getElementById("bTtitle1").textContent = "Earthcoin";
+			  tickerCode = "EAC";
+			}
+			else if (document.getElementById("customCoinName").value == "ecc") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/ecc.png";
+			  document.getElementById("bTtitle").textContent = "ECCoin";
+			  document.getElementById("bTtitle1").textContent = "ECCoin";
+			  tickerCode = "ECC";
+			}
+			else if (document.getElementById("customCoinName").value == "ec") {
+			  document.getElementById("coinjs_pub").value = "0x5d";
+			  document.getElementById("coinjs_priv").value = "0xff";
+			  document.getElementById("coinjs_multisig").value = "0xc4";
+			  document.getElementById("coinLogo").src = "images/logo/ec.png";
+			  document.getElementById("bTtitle").textContent = "Eclipse";
+			  document.getElementById("bTtitle1").textContent = "Eclipse";
+			  tickerCode = "EC";
+			}
+			else if (document.getElementById("customCoinName").value == "emc2") {
+			  document.getElementById("coinjs_pub").value = "0x32";
+			  document.getElementById("coinjs_priv").value = "0xa1";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/emc2.png";
+			  document.getElementById("bTtitle").textContent = "Einsteinium";
+			  document.getElementById("bTtitle1").textContent = "Einsteinium";
+			  tickerCode = "EMC2";
+			}
+			else if (document.getElementById("customCoinName").value == "elt") {
+			  document.getElementById("coinjs_pub").value = "0x5c";
+			  document.getElementById("coinjs_priv").value = "0xdc";
+			  document.getElementById("coinjs_multisig").value = "0x7";
+			  document.getElementById("coinLogo").src = "images/logo/elt.png";
+			  document.getElementById("bTtitle").textContent = "Electron";
+			  document.getElementById("bTtitle1").textContent = "Electron";
+			  tickerCode = "ELT";
+			}
+			else if (document.getElementById("customCoinName").value == "eny") {
+			  document.getElementById("coinjs_pub").value = "0x21";
+			  document.getElementById("coinjs_priv").value = "0xa1";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/eny.png";
+			  document.getElementById("bTtitle").textContent = "Emergencycoin";
+			  document.getElementById("bTtitle1").textContent = "Emergencycoin";
+			  tickerCode = "ENY";
+			}
+			else if (document.getElementById("customCoinName").value == "eqt") {
+			  document.getElementById("coinjs_pub").value = "0x21";
+			  document.getElementById("coinjs_priv").value = "0xa1";
+			  document.getElementById("coinjs_multisig").value = "0x14";
+			  document.getElementById("coinLogo").src = "images/logo/eqt.png";
+			  document.getElementById("bTtitle").textContent = "Equitrade";
+			  document.getElementById("bTtitle1").textContent = "Equitrade";
+			  tickerCode = "EQT";
+			}
+			else if (document.getElementById("customCoinName").value == "ent") {
+			  document.getElementById("coinjs_pub").value = "0x21";
+			  document.getElementById("coinjs_priv").value = "0x65";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/ent.png";
+			  document.getElementById("bTtitle").textContent = "Eternity";
+			  document.getElementById("bTtitle1").textContent = "Eternity";
+			  tickerCode = "ENT";
+			}
+			else if (document.getElementById("customCoinName").value == "egc") {
+			  document.getElementById("coinjs_pub").value = "0x21";
+			  document.getElementById("coinjs_priv").value = "0x65";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/egc.png";
+			  document.getElementById("bTtitle").textContent = "EverGreenCoin";
+			  document.getElementById("bTtitle1").textContent = "EverGreenCoin";
+			  tickerCode = "EGC";
+			}
+			else if (document.getElementById("customCoinName").value == "excl") {
+			  document.getElementById("coinjs_pub").value = "0x21";
+			  document.getElementById("coinjs_priv").value = "0xa1";
+			  document.getElementById("coinjs_multisig").value = "0x89";
+			  document.getElementById("coinLogo").src = "images/logo/excl.png";
+			  document.getElementById("bTtitle").textContent = "ExclusiveCoin";
+			  document.getElementById("bTtitle1").textContent = "ExclusiveCoin";
+			  tickerCode = "EXCL";
+			}
+			else if (document.getElementById("customCoinName").value == "exo") {
+			  document.getElementById("coinjs_pub").value = "0x21";
+			  document.getElementById("coinjs_priv").value = "0x6f";
+			  document.getElementById("coinjs_multisig").value = "0x4";
+			  document.getElementById("coinLogo").src = "images/logo/exo.png";
+			  document.getElementById("bTtitle").textContent = "Exosis";
+			  document.getElementById("bTtitle1").textContent = "Exosis";
+			  tickerCode = "EXO";
+			}
+			else if (document.getElementById("customCoinName").value == "gali") {
+			  document.getElementById("coinjs_pub").value = "0x44";
+			  document.getElementById("coinjs_priv").value = "0xc1";
+			  document.getElementById("coinjs_multisig").value = "0x10";
+			  document.getElementById("coinLogo").src = "images/logo/gali.png";
+			  document.getElementById("bTtitle").textContent = "Galilel";
+			  document.getElementById("bTtitle1").textContent = "Galilel";
+			  tickerCode = "GALI";
+			}
+			else if (document.getElementById("customCoinName").value == "gap") {
+			  document.getElementById("coinjs_pub").value = "0x26";
+			  document.getElementById("coinjs_priv").value = "0x61";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/gap.png";
+			  document.getElementById("bTtitle").textContent = "Gapcoin";
+			  document.getElementById("bTtitle1").textContent = "Gapcoin";
+			  tickerCode = "GAP";
+			}
+			else if (document.getElementById("customCoinName").value == "genx") {
+			  document.getElementById("coinjs_pub").value = "0x1c";
+			  document.getElementById("coinjs_priv").value = "0x30";
+			  document.getElementById("coinjs_multisig").value = "0x3f";
+			  document.getElementById("coinLogo").src = "images/logo/genx.png";
+			  document.getElementById("bTtitle").textContent = "Genesis";
+			  document.getElementById("bTtitle1").textContent = "Genesis";
+			  tickerCode = "GENX";
+			}
+			else if (document.getElementById("customCoinName").value == "glt") {
+			  document.getElementById("coinjs_pub").value = "0x26";
+			  document.getElementById("coinjs_priv").value = "0xa6";
+			  document.getElementById("coinjs_multisig").value = "0x8d";
+			  document.getElementById("coinLogo").src = "images/logo/glt.png";
+			  document.getElementById("bTtitle").textContent = "GlobalToken";
+			  document.getElementById("bTtitle1").textContent = "GlobalToken";
+			  tickerCode = "GLT";
+			}
+			else if (document.getElementById("customCoinName").value == "glc") {
+			  document.getElementById("coinjs_pub").value = "0x20";
+			  document.getElementById("coinjs_priv").value = "0xa0";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/glc.png";
+			  document.getElementById("bTtitle").textContent = "Goldcoin";
+			  document.getElementById("bTtitle1").textContent = "Goldcoin";
+			  tickerCode = "GLC";
+			}
+			else if (document.getElementById("customCoinName").value == "gpl2") {
+			  document.getElementById("coinjs_pub").value = "0x23";
+			  document.getElementById("coinjs_priv").value = "0xa3";
+			  document.getElementById("coinjs_multisig").value = "0x8c";
+			  document.getElementById("coinLogo").src = "images/logo/gpl2.png";
+			  document.getElementById("bTtitle").textContent = "Gold Pressed Latinum";
+			  document.getElementById("bTtitle1").textContent = "Gold Pressed Latinum";
+			  tickerCode = "GPL2";
+			}
+			else if (document.getElementById("customCoinName").value == "grn") {
+			  document.getElementById("coinjs_pub").value = "0x26";
+			  document.getElementById("coinjs_priv").value = "0xa6";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/grn.png";
+			  document.getElementById("bTtitle").textContent = "Granite";
+			  document.getElementById("bTtitle1").textContent = "Granite";
+			  tickerCode = "GRN";
+			}
+			else if (document.getElementById("customCoinName").value == "gxx") {
+			  document.getElementById("coinjs_pub").value = "0x28";
+			  document.getElementById("coinjs_priv").value = "0xd2";
+			  document.getElementById("coinjs_multisig").value = "0xa";
+			  document.getElementById("coinLogo").src = "images/logo/gxx.png";
+			  document.getElementById("bTtitle").textContent = "GravityCoin";
+			  document.getElementById("bTtitle1").textContent = "GravityCoin";
+			  tickerCode = "GXX";
+			}
+			else if (document.getElementById("customCoinName").value == "gwri") {
+			  document.getElementById("coinjs_pub").value = "0x26";
+			  document.getElementById("coinjs_priv").value = "0x84";
+			  document.getElementById("coinjs_multisig").value = "0xab";
+			  document.getElementById("coinLogo").src = "images/logo/gwri.png";
+			  document.getElementById("bTtitle").textContent = "Growers";
+			  document.getElementById("bTtitle1").textContent = "Growers";
+			  tickerCode = "GWRI";
+			}
+			else if (document.getElementById("customCoinName").value == "hbn") {
+			  document.getElementById("coinjs_pub").value = "0x22";
+			  document.getElementById("coinjs_priv").value = "0xa2";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/hbn.png";
+			  document.getElementById("bTtitle").textContent = "HoboNickels";
+			  document.getElementById("bTtitle1").textContent = "HoboNickels";
+			  tickerCode = "HBN";
+			}
+			else if (document.getElementById("customCoinName").value == "html5") {
+			  document.getElementById("coinjs_pub").value = "0x28";
+			  document.getElementById("coinjs_priv").value = "0xa8";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/html5.png";
+			  document.getElementById("bTtitle").textContent = "Html5coin";
+			  document.getElementById("bTtitle1").textContent = "Html5coin";
+			  tickerCode = "HTML5";
+			}
+			else if (document.getElementById("customCoinName").value == "ioc") {
+			  document.getElementById("coinjs_pub").value = "0x67";
+			  document.getElementById("coinjs_priv").value = "0xe7";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/ioc.png";
+			  document.getElementById("bTtitle").textContent = "I/O Coin";
+			  document.getElementById("bTtitle1").textContent = "I/O Coin";
+			  tickerCode = "IOC";
+			}
+			else if (document.getElementById("customCoinName").value == "i0c") {
+			  document.getElementById("coinjs_pub").value = "0x69";
+			  document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/i0c.png";
+			  document.getElementById("bTtitle").textContent = "I/0 Coin";
+			  document.getElementById("bTtitle1").textContent = "I/0 Coin";
+			  tickerCode = "I0C";
+			}
+			else if (document.getElementById("customCoinName").value == "icn") {
+			  document.getElementById("coinjs_pub").value = "0x1a";
+			  document.getElementById("coinjs_priv").value = "0x9a";
+			  document.getElementById("coinjs_multisig").value = "0x16";
+			  document.getElementById("coinLogo").src = "images/logo/icn.png";
+			  document.getElementById("bTtitle").textContent = "iCoin";
+			  document.getElementById("bTtitle1").textContent = "iCoin";
+			  tickerCode = "ICN";
+			}
+			else if (document.getElementById("customCoinName").value == "ic") {
+			  document.getElementById("coinjs_pub").value = "0x67";
+			  document.getElementById("coinjs_priv").value = "0x8a";
+			  document.getElementById("coinjs_multisig").value = "0x27";
+			  document.getElementById("coinLogo").src = "images/logo/ic.png";
+			  document.getElementById("bTtitle").textContent = "Ignition Coin";
+			  document.getElementById("bTtitle1").textContent = "Ignition Coin";
+			  tickerCode = "IC";
+			}
+			else if (document.getElementById("customCoinName").value == "img") {
+			  document.getElementById("coinjs_pub").value = "0x33";
+			  document.getElementById("coinjs_priv").value = "0xcc";
+			  document.getElementById("coinjs_multisig").value = "0x10";
+			  document.getElementById("coinLogo").src = "images/logo/img.png";
+			  document.getElementById("bTtitle").textContent = "ImageCoin";
+			  document.getElementById("bTtitle1").textContent = "ImageCoin";
+			  tickerCode = "IMG";
+			}
+
 		  else {
 				document.getElementById("xfeeTicker").textContent = document.getElementById("customCoinName").value
 				console.log(document.getElementById("customCoinName").value);
@@ -2914,22 +3158,19 @@ jQuery(document).ready(function($) {
 								<b>Broadcast</b>: <br>
 								<p class="text-muted">Select the network you wish to broadcast the transaction via</p>
 								<select class="form-control" id="coinjs_broadcast">
-                                    <option value="coinb.in">Pandacoin (mainnet)</option>
-                                    <option value="cryptoid.info_zeitcoin">Zeitcoin (mainnet)</option>
-                                    <option value="blockcypher_litecoin"> Blockcypher.com (Litecoin)</option>
-                                    <option value="digiexplorer.info"> DigiExplorer.info (DigiByte)</option>
+                  <option value="coinb.in">Pandacoin (mainnet)</option>
+                  <option value="cryptoid.info_zeitcoin">Zeitcoin (mainnet)</option>
+                  <option value="blockcypher_litecoin"> Blockcypher.com (Litecoin)</option>
+                  <option value="digiexplorer.info"> DigiExplorer.info (DigiByte)</option>
 									<option value="blockchair_bitcoinmainnet"> Blockchair.com (Bitcoin mainnet)</option>
 									<option value="blockchair_litecoin"> Blockchair.com (Litecoin)</option>
 									<option value="blockcypher_dogecoin"> Blockcypher.com (Dogecoin)</option>
 									<option value="chain.so_bitcoinmainnet"> Chain.so (Bitcoin mainnet)</option>
 									<option value="cryptoid.info_cypherfunk"> Cryptoid.info (Cypherfunk)</option>
-                                    <option value="chain.so_bitcoinmainnet"> Chain.so (Pandacoin mainnet)</option>
-									<option value="blockcypher_bitcoinmainnet"> Blockcypher.com (Pandacoin mainnet)</option>
 									<option value="chain.so_litecoin"> Chain.so (Litecoin)</option>
 									<option value="cryptoid.info_carboncoin"> Cryptoid.info (Carboncoin)</option>
 									<option value="shadowcash.host"> ShadowCash</option>
 									<option value="cryptoid.custom">Custom</option>
-
 								</select>
 							</div>
 						</div>
