--- a/index.html
+++ b/index.html
@@ -1700,6 +1700,213 @@
 			  document.getElementById("bTtitle1").textContent = "ImageCoin";
 			  tickerCode = "IMG";
 			}
+			else if (document.getElementById("customCoinName").value == "imx") {
+			  document.getElementById("coinjs_pub").value = "0x4c";
+			  document.getElementById("coinjs_priv").value = "0xcc";
+			  document.getElementById("coinjs_multisig").value = "0x8d";
+			  document.getElementById("coinLogo").src = "images/logo/imx.png";
+			  document.getElementById("bTtitle").textContent = "Impact";
+			  document.getElementById("bTtitle1").textContent = "Impact";
+			  tickerCode = "IMX";
+			}
+			else if (document.getElementById("customCoinName").value == "ifc") {
+			  document.getElementById("coinjs_pub").value = "0x66";
+			  document.getElementById("coinjs_priv").value = "0xe6";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/ifc.png";
+			  document.getElementById("bTtitle").textContent = "Infinitecoin";
+			  document.getElementById("bTtitle1").textContent = "Infinitecoin";
+			  tickerCode = "IFC";
+			}
+			else if (document.getElementById("customCoinName").value == "iflt") {
+			  document.getElementById("coinjs_pub").value = "0x66";
+			  document.getElementById("coinjs_priv").value = "0xe6";
+			  document.getElementById("coinjs_multisig").value = "0x7";
+			  document.getElementById("coinLogo").src = "images/logo/iflt.png";
+			  document.getElementById("bTtitle").textContent = "Inflationcoin";
+			  document.getElementById("bTtitle1").textContent = "Inflationcoin";
+			  tickerCode = "IFLT";
+			}
+			else if (document.getElementById("customCoinName").value == "info") {
+			  document.getElementById("coinjs_pub").value = "0x66";
+			  document.getElementById("coinjs_priv").value = "0x40";
+			  document.getElementById("coinjs_multisig").value = "0x43";
+			  document.getElementById("coinLogo").src = "images/logo/info.png";
+			  document.getElementById("bTtitle").textContent = "Infocoin";
+			  document.getElementById("bTtitle1").textContent = "Infocoin";
+			  tickerCode = "INFO";
+			}
+			else if (document.getElementById("customCoinName").value == "insn") {
+			  document.getElementById("coinjs_pub").value = "0x66";
+			  document.getElementById("coinjs_priv").value = "0x37";
+			  document.getElementById("coinjs_multisig").value = "0x39";
+			  document.getElementById("coinLogo").src = "images/logo/insn.png";
+			  document.getElementById("bTtitle").textContent = "Insanecoin";
+			  document.getElementById("bTtitle1").textContent = "Insanecoin";
+			  tickerCode = "INSN";
+			}
+			else if (document.getElementById("customCoinName").value == "ion") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/ion.png";
+			  document.getElementById("bTtitle").textContent = "Ioncoin";
+			  document.getElementById("bTtitle1").textContent = "Ioncoin";
+			  tickerCode = "ION";
+			}
+			else if (document.getElementById("customCoinName").value == "j") {
+			  document.getElementById("coinjs_pub").value = "0x2b";
+			  document.getElementById("coinjs_priv").value = "0xb2";
+			  document.getElementById("coinjs_multisig").value = "0x9";
+			  document.getElementById("coinLogo").src = "images/logo/j.png";
+			  document.getElementById("bTtitle").textContent = "Joincoin";
+			  document.getElementById("bTtitle1").textContent = "Joincoin";
+			  tickerCode = "J";
+			}
+			else if (document.getElementById("customCoinName").value == "xjo") {
+			  document.getElementById("coinjs_pub").value = "0x2b";
+			  document.getElementById("coinjs_priv").value = "0x8f";
+			  document.getElementById("coinjs_multisig").value = "0xb";
+			  document.getElementById("coinLogo").src = "images/logo/xjo.png";
+			  document.getElementById("bTtitle").textContent = "Joulecoin";
+			  document.getElementById("bTtitle1").textContent = "Joulecoin";
+			  tickerCode = "XJO";
+			}
+			else if (document.getElementById("customCoinName").value == "klks") {
+			  document.getElementById("coinjs_pub").value = "0x2e";
+			  document.getElementById("coinjs_priv").value = "0xae";
+			  document.getElementById("coinjs_multisig").value = "0xd";
+			  document.getElementById("coinLogo").src = "images/logo/klks.png";
+			  document.getElementById("bTtitle").textContent = "Kalkulus";
+			  document.getElementById("bTtitle1").textContent = "Kalkulus";
+			  tickerCode = "KLKS";
+			}
+			else if (document.getElementById("customCoinName").value == "kobo") {
+			  document.getElementById("coinjs_pub").value = "0x23";
+			  document.getElementById("coinjs_priv").value = "0xa3";
+			  document.getElementById("coinjs_multisig").value = "0x1c";
+			  document.getElementById("coinLogo").src = "images/logo/kobo.png";
+			  document.getElementById("bTtitle").textContent = "Kobocoin";
+			  document.getElementById("bTtitle1").textContent = "Kobocoin";
+			  tickerCode = "KOBO";
+			}
+			else if (document.getElementById("customCoinName").value == "kore") {
+			  document.getElementById("coinjs_pub").value = "0x2d";
+			  document.getElementById("coinjs_priv").value = "0xad";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/kore.png";
+			  document.getElementById("bTtitle").textContent = "KoreCoin";
+			  document.getElementById("bTtitle1").textContent = "KoreCoin";
+			  tickerCode = "KORE";
+			}
+			else if (document.getElementById("customCoinName").value == "kum") {
+			  document.getElementById("coinjs_pub").value = "0x2e";
+			  document.getElementById("coinjs_priv").value = "0xae";
+			  document.getElementById("coinjs_multisig").value = "0xd";
+			  document.getElementById("coinLogo").src = "images/logo/kum.png";
+			  document.getElementById("bTtitle").textContent = "Krium";
+			  document.getElementById("bTtitle1").textContent = "Krium";
+			  tickerCode = "KUM";
+			}
+			else if (document.getElementById("customCoinName").value == "vgs") {
+			  document.getElementById("coinjs_pub").value = "0x46";
+			  document.getElementById("coinjs_priv").value = "0xd4";
+			  document.getElementById("coinjs_multisig").value = "0xd";
+			  document.getElementById("coinLogo").src = "images/logo/vgs.png";
+			  document.getElementById("bTtitle").textContent = "LasVegasCoin";
+			  document.getElementById("bTtitle1").textContent = "LasVegasCoin";
+			  tickerCode = "VGS";
+			}
+			else if (document.getElementById("customCoinName").value == "linx") {
+			  document.getElementById("coinjs_pub").value = "0x4b";
+			  document.getElementById("coinjs_priv").value = "0xcb";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/linx.png";
+			  document.getElementById("bTtitle").textContent = "Linx";
+			  document.getElementById("bTtitle1").textContent = "Linx";
+			  tickerCode = "LINX";
+			}
+			else if (document.getElementById("customCoinName").value == "lcc") {
+			  document.getElementById("coinjs_pub").value = "0x1c";
+			  document.getElementById("coinjs_priv").value = "0xb0";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/lcc.png";
+			  document.getElementById("bTtitle").textContent = "Litecoin Cash";
+			  document.getElementById("bTtitle1").textContent = "Litecoin Cash";
+			  tickerCode = "LCC";
+			}
+			else if (document.getElementById("customCoinName").value == "lit") {
+			  document.getElementById("coinjs_pub").value = "0x13";
+			  document.getElementById("coinjs_priv").value = "0x93";
+			  document.getElementById("coinjs_multisig").value = "0x7";
+			  document.getElementById("coinLogo").src = "images/logo/lit.png";
+			  document.getElementById("bTtitle").textContent = "Lithium";
+			  document.getElementById("bTtitle1").textContent = "Lithium";
+			  tickerCode = "LIT";
+			}
+			else if (document.getElementById("customCoinName").value == "lux") {
+			  document.getElementById("coinjs_pub").value = "0x30";
+			  document.getElementById("coinjs_priv").value = "0x9b";
+			  document.getElementById("coinjs_multisig").value = "0x3f";
+			  document.getElementById("coinLogo").src = "images/logo/lux.png";
+			  document.getElementById("bTtitle").textContent = "LUXCoin";
+			  document.getElementById("bTtitle1").textContent = "LUXCoin";
+			  tickerCode = "LUX";
+			}
+			else if (document.getElementById("customCoinName").value == "manna") {
+			  document.getElementById("coinjs_pub").value = "0x26";
+			  document.getElementById("coinjs_priv").value = "0xa6";
+			  document.getElementById("coinjs_multisig").value = "0x61";
+			  document.getElementById("coinLogo").src = "images/logo/manna.png";
+			  document.getElementById("bTtitle").textContent = "Manna";
+			  document.getElementById("bTtitle1").textContent = "Manna";
+			  tickerCode = "MANNA";
+			}
+			else if (document.getElementById("customCoinName").value == "mscn") {
+			  document.getElementById("coinjs_pub").value = "0x7d";
+			  document.getElementById("coinjs_priv").value = "0xfd";
+			  document.getElementById("coinjs_multisig").value = "0x14";
+			  document.getElementById("coinLogo").src = "images/logo/mscn.png";
+			  document.getElementById("bTtitle").textContent = "Master Swiscoin";
+			  document.getElementById("bTtitle1").textContent = "Master Swiscoin";
+			  tickerCode = "MSCN";
+			}
+			else if (document.getElementById("customCoinName").value == "mrc") {
+			  document.getElementById("coinjs_pub").value = "0x32";
+			  document.getElementById("coinjs_priv").value = "0xb2";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/mrc.png";
+			  document.getElementById("bTtitle").textContent = "Meritcoin";
+			  document.getElementById("bTtitle1").textContent = "Meritcoin";
+			  tickerCode = "MRC";
+			}
+			else if (document.getElementById("customCoinName").value == "mfc") {
+			  document.getElementById("coinjs_pub").value = "0x33";
+			  document.getElementById("coinjs_priv").value = "0xb3";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/mfc.png";
+			  document.getElementById("bTtitle").textContent = "MFCoin";
+			  document.getElementById("bTtitle1").textContent = "MFCoin";
+			  tickerCode = "MFC";
+			}
+			else if (document.getElementById("customCoinName").value == "mic") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/mic.png";
+			  document.getElementById("bTtitle").textContent = "Mindexcoin";
+			  document.getElementById("bTtitle1").textContent = "Mindexcoin";
+			  tickerCode = "MIC";
+			}
+			else if (document.getElementById("customCoinName").value == "mst") {
+			  document.getElementById("coinjs_pub").value = "0x30";
+			  document.getElementById("coinjs_priv").value = "0xb0";
+			  document.getElementById("coinjs_multisig").value = "0x1c";
+			  document.getElementById("coinLogo").src = "images/logo/mst.png";
+			  document.getElementById("bTtitle").textContent = "Mustang Coin";
+			  document.getElementById("bTtitle1").textContent = "Mustang Coin";
+			  tickerCode = "MST";
+			}
 
 		  else {
 				document.getElementById("xfeeTicker").textContent = document.getElementById("customCoinName").value
